# deep-variable

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/deep_variable/: __init__.py  core.py
tests/: test_core.py
