[project]
name = "deep-variable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yashas G V", email = "yashasgadam@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
