[project]
name = "deep-variable"
version = "0.1.0"
description = "**Deep Variable** is a lightweight, zero-dependency Python utility designed to eliminate `KeyError` and `TypeError` crashes when working with deeply nested data structures"
readme = "README.md"
authors = [
    { name = "Yashas G V", email = "REDACTED" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
# The maximum line length
line-length = 88

# The target Python version
target-version = "py38"

[tool.ruff.lint]
# Enable specific rule sets
# E, W = pycodestyle (Flake8 basics)
# F = pyflakes
# I = isort (import sorting)
# B = flake8-bugbear (catches logic bugs)
select = ["E", "F", "W", "I", "B"]

# Files or directories to ignore
ignore = []

[tool.ruff.format]
# Use double quotes for strings (Standard Pythonic style)
quote-style = "double"
# Indent with spaces
indent-style = "space"